tests/ui/coverage-attr/allowed-positions.stderr
error: `#[coverage]` attribute cannot be used on type aliases
  --> $DIR/allowed-positions.rs:14:1
   |
LL | #[coverage(off)]
   | ^^^^^^^^^^^^^^^^
   |
   = help: `#[coverage]` can be applied to crates, functions, impl blocks, and modules

error: `#[coverage]` attribute cannot be used on traits
  --> $DIR/allowed-positions.rs:17:1
   |
LL | #[coverage(off)]
   | ^^^^^^^^^^^^^^^^
   |
   = help: `#[coverage]` can be applied to crates, functions, impl blocks, and modules

error: `#[coverage]` attribute cannot be used on associated consts
  --> $DIR/allowed-positions.rs:19:5
   |
LL |     #[coverage(off)]
   |     ^^^^^^^^^^^^^^^^
   |
   = help: `#[coverage]` can be applied to crates, functions, impl blocks, and modules

error: `#[coverage]` attribute cannot be used on associated types
  --> $DIR/allowed-positions.rs:22:5
   |
LL |     #[coverage(off)]
   |     ^^^^^^^^^^^^^^^^
   |
   = help: `#[coverage]` can be applied to crates, functions, impl blocks, and modules

error: `#[coverage]` attribute cannot be used on required trait methods
  --> $DIR/allowed-positions.rs:25:5
   |
LL |     #[coverage(off)]
   |     ^^^^^^^^^^^^^^^^
   |
   = help: `#[coverage]` can be applied to crates, functions with a body, impl blocks, and modules

error: `#[coverage]` attribute cannot be used on required trait methods
  --> $DIR/allowed-positions.rs:31:5
   |
LL |     #[coverage(off)]
   |     ^^^^^^^^^^^^^^^^
   |
   = help: `#[coverage]` can be applied to crates, functions with a body, impl blocks, and modules

error: `#[coverage]` attribute cannot be used on associated types
  --> $DIR/allowed-positions.rs:39:5
   |
LL |     #[coverage(off)]
   |     ^^^^^^^^^^^^^^^^
   |
   = help: `#[coverage]` can be applied to crates, functions, impl blocks, and modules

error: `#[coverage]` attribute cannot be used on associated types
  --> $DIR/allowed-positions.rs:56:5
   |
LL |     #[coverage(off)]
   |     ^^^^^^^^^^^^^^^^
   |
   = help: `#[coverage]` can be applied to crates, functions, impl blocks, and modules

error: `#[coverage]` attribute cannot be used on structs
  --> $DIR/allowed-positions.rs:61:1
   |
LL | #[coverage(off)]
   | ^^^^^^^^^^^^^^^^
   |
   = help: `#[coverage]` can be applied to crates, functions, impl blocks, and modules

error: `#[coverage]` attribute cannot be used on struct fields
  --> $DIR/allowed-positions.rs:63:5
   |
LL |     #[coverage(off)]
   |     ^^^^^^^^^^^^^^^^
   |
   = help: `#[coverage]` can be applied to crates, functions, impl blocks, and modules

error: `#[coverage]` attribute cannot be used on foreign statics
  --> $DIR/allowed-positions.rs:76:5
   |
LL |     #[coverage(off)]
   |     ^^^^^^^^^^^^^^^^
   |
   = help: `#[coverage]` can be applied to crates, functions, impl blocks, and modules

error: `#[coverage]` attribute cannot be used on foreign types
  --> $DIR/allowed-positions.rs:79:5
   |
LL |     #[coverage(off)]
   |     ^^^^^^^^^^^^^^^^
   |
   = help: `#[coverage]` can be applied to crates, functions, impl blocks, and modules

error: `#[coverage]` attribute cannot be used on foreign functions
  --> $DIR/allowed-positions.rs:82:5
   |
LL |     #[coverage(off)]
   |     ^^^^^^^^^^^^^^^^
   |
   = help: `#[coverage]` can be applied to crates, functions with a body, impl blocks, and modules

error: `#[coverage]` attribute cannot be used on statements
  --> $DIR/allowed-positions.rs:88:5
   |
LL |     #[coverage(off)]
   |     ^^^^^^^^^^^^^^^^
   |
   = help: `#[coverage]` can be applied to crates, functions, impl blocks, and modules

error: `#[coverage]` attribute cannot be used on statements
  --> $DIR/allowed-positions.rs:94:5
   |
LL |     #[coverage(off)]
   |     ^^^^^^^^^^^^^^^^
   |
   = help: `#[coverage]` can be applied to crates, functions, impl blocks, and modules

error: `#[coverage]` attribute cannot be used on match arms
  --> $DIR/allowed-positions.rs:108:9
   |
LL |         #[coverage(off)]
   |         ^^^^^^^^^^^^^^^^
   |
   = help: `#[coverage]` can be applied to crates, functions, impl blocks, and modules

error: `#[coverage]` attribute cannot be used on expressions
  --> $DIR/allowed-positions.rs:112:5
   |
LL |     #[coverage(off)]
   |     ^^^^^^^^^^^^^^^^
   |
   = help: `#[coverage]` can be applied to crates, functions, impl blocks, and modules

error: aborting due to 17 previous errors

